[project]
name = "cogniflow"
version = "0.1.0"
description = "AI Workflow Orchestration Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.27",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.1.0",
    "dramatiq[redis]>=1.16.0",
    "python-multipart>=0.0.9",
    "pymupdf>=1.23.22",
    "python-docx>=1.1.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
